<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">


    <fragment
        android:id="@+id/nav_login"
        android:name="com.losmugiwaras.a08_navigation_02.ui.seccion.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_proyecto"
        android:name="com.losmugiwaras.a08_navigation_02.ui.fragments.Proyecto"
        android:label="@string/menu_Proyecto"
        tools:layout="@layout/activity_proyecto" />

    <fragment
        android:id="@+id/nav_investigaciones"
        android:name="com.losmugiwaras.a08_navigation_02.ui.fragments.ResearchListFragment"
        android:label="@string/menu_investigaciones"
        tools:layout="@layout/fragment_research_list" />

    <fragment
        android:id="@+id/nav_comentarios"
        android:name="com.losmugiwaras.a08_navigation_02.ui.fragments.ComentariosFragment"
        android:label="@string/menu_comentario"
        android:layout="@layout/fragment_comentarios" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.losmugiwaras.a08_navigation_02.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_about"
        android:name="com.losmugiwaras.a08_navigation_02.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />


</navigation>